--- a/sample.env
+++ b/sample.env
@@ -1,6 +1,6 @@
-POSTGRES_USERNAME=""
-POSTGRES_PASSWORD=""
-POSTGRES_SERVER=""
-POSTGRES_DATABASE=""
-OPENAI_API_KEY=""
-HASHED_PASSWORD=""
+POSTGRES_USERNAME="found in Info -> Connections -> Username"
+POSTGRES_PASSWORD="found in Info -> Connections -> Password"
+POSTGRES_SERVER="found in Info -> Connections -> PSQL Command (take the part that starts with dpg and ends with render.com)"
+POSTGRES_DATABASE="found in Info -> Connections -> Database"
+OPENAI_API_KEY="api secret key from the llm of your choice"
+HASHED_PASSWORD="take the hashed output you get from running the generate_password.py file and entering a password"
